prep next release

--- a/Changes
+++ b/Changes
@@ -1,7 +1,10 @@
 Revision history for Perl extension Dist-Zilla-Plugin-MetaResources
 
-0.06	2009.05.11
-	fix version, fix authors
+0.07    2009.06.13
+        fix use of git-remote show to work offline (rjbs)
+
+0.06	  2009.05.11
+        fix version, fix authors
 
 0.02    2009.04.21
         use http instead of git for github.com
