--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Perl extension Dist-Zilla-Plugin-Repository
 
-0.09
-        Change private googlecode repository url to the public one
+0.09    2009.08.10
+        Change private googlecode repository url to the public one (Moritz Onken)
 
 0.08    2009.05.14
         Added Mercurial support From Module-Install-Repository-0.05
