Better Meta 2 support
  Add type & web attributes
  Bump version to 0.15

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Dist-Zilla-Plugin-Repository
 
+0.15    NOT
+        better Meta 2 support: added type & web attrs (cjm)
+
 0.14    2010.09.01
         make repository attr, lazy, changeable (Sawyer X)
 
