--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Dist-Zilla-Plugin-Repository
 
+0.21    2017-08-29
+        Make web URI's possible for gitlab and bitbucket (waterkip)
+
 0.20    2013-02-25
         $ENV{LC_ALL} = "C"; from jquelin
 
