--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Dist-Zilla-Plugin-Repository
 
+0.24    2018-12-20
+        Auto generate minimum perl version as suggested by CPANTS. (manwar)
+
 0.23    2018-06-18
         Added missing prereq Moose as suggested by CPANTS. #8 (manwar)
 
